--- a/Homework6/MyHttpServer/appsettings.json
+++ b/Homework6/MyHttpServer/appsettings.json
@@ -1,5 +1,9 @@
-{
-    "Port": 1414,
-    "Address": "http://127.0.0.1",
-    "StaticFilesPath": "static"
-  }
+﻿{
+  "Port": 1414,
+  "Address": "http://127.0.0.1",
+  "StaticFilesPath": "static",
+  "SmtpUsername": "adelmuhamedshin@yandex.ru",
+  "SmtpPassword": "qwerty",
+  "SmtpServer" : "smtp.yandex.ru",
+  "SmtpPort" : 465
+}
